--- a/back/package.json
+++ b/back/package.json
@@ -23,6 +23,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   }
 }
