--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "formik": "^2.4.4",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
